--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href=".\src\assets\icon.ico">
+    <link rel="icon" type="image/png" href="./src/assets/icon.png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JobJolt</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
