--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-black"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
